--- a/Donation.html
+++ b/Donation.html
@@ -40,32 +40,39 @@
   <!--==========================
     Header
   ============================-->
-  <header id="header">
+ <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">BizooPage</a></h1>
+        <h1><a href="#intro" class="scrollto">NVFS</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
+        <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">resources</a></li>
-          <li><a href="#about">Monetary Donations</a></li>
-          <li><a href="#services">in kind</a></li>
-          <li><a href="#portfolio">Volunteer</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+          <li class="menu-active"><a href="#intro">Home</a></li>
+          <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Early Childhood Development</a></li>
+              <li><a href="#">Foster Care and Adoption</a></li>
+              <li><a href="#">Health and Well-Being</a></li>
+              <li><a href="#">Homelessness and Housing</a></li>
+              <li><a href="#">Immigration Services</a></li>
+              <li><a href="#">Mental Health</a></li>
+              <li><a href="#">Workforce Development</a></li>
+              <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+          <li class="menu-has-children"><a href="">Donate</a>
+            <ul>
+              <li><a href="DonationI.html">Monetary</a></li>
+              <li><a href="Donation.html">In-Kind</a></li>
+            </ul>
+          </li>
+          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+          <li class="menu-active"><a href="#intro">About</a></li>
+          <li class="menu-active"><a href="#intro">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
