--- a/healthAndWellbeing.html
+++ b/healthAndWellbeing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BizPage Bootstrap Template</title>
+  <title>NVFS</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -66,11 +66,11 @@
           </li>
           <li class="menu-has-children"><a href="">Donate</a>
             <ul>
-              <li><a href="DonationI.html">Monetary</a></li>
-              <li><a href="Donation.html">In-Kind</a></li>
+              <li><a href="#">Monetary</a></li>
+              <li><a href="#">In-Kind</a></li>
             </ul>
           </li>
-          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+          <li class="menu-active"><a href="#intro">Volunteer</a></li>
           <li class="menu-active"><a href="#intro">About</a></li>
           <li class="menu-active"><a href="#intro">Contact</a></li>
       </nav><!-- #nav-menu-container -->
@@ -98,45 +98,27 @@
       <div class="container">
 
         <header class="section-header wow fadeInUp">
-          <h3>Departments</h3>
-          <p>NVFS services range from the most basic of human needs, to helping families and individuals find paths to stability, to helping children, adults and families realize their full potential.</p>
+          <h3>Health and Well-Being</h3>
+          <p> Health care is critical to creating a strong foundation for overall health and well-being. Without access to both preventative health services and health care, it can feel impossible for individuals to function at work or at home. But not everyone living in the Northern Virginia region is able to afford health or dental insurance. NVFS health programs remove barriers to medical care so that families do not need to decide between medication, rent or food.
+				Proper nutrition education informs health decisions as well, and helps families make good choices about what they eat. By focusing on how food affects their bodies, family members can maintain better health overall and decrease the impacts of poor nutrition on their bodies. We also ensure that local families have access to food essentials to provide the nourishment they need each and every day.
+		  </p>
         </header>
 
         <div class="row">
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Early Childhood Development</a></h4>
+            <h4 class="title"><a href="">Health Access</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-            <h4 class="title"><a href="">Homelessness and Housing</a></h4>
+            <h4 class="title"><a href="">Dental Access</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="connect.php">Mental Health</a></h4>
+            <h4 class="title"><a href="">Hunger Resource</a></h4>
           </div>
-          <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            <h4 class="title"><a href="">Workforce Development</a></h4>
-          </div>
-          <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
-            <h4 class="title"><a href="">Foster Care and Adoption</a></h4>
-          </div>
-          <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="test.php">Youth Initiatives</a></h4>
-          </div>
-		    <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="">Immigration Legal Services</a></h4>
-          </div>
-		    <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="">Health and Well Being</a></h4>
-          </div>
-
+      
         </div>
 
       </div>
@@ -147,20 +129,7 @@
   </main>
 
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+    
   </footer><!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
