--- a/DonationI.html
+++ b/DonationI.html
@@ -85,7 +85,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Material Donations</h3>
+          <h3>In-Kind Donations</h3>
           <p>Please fill in the fields below in order for us to process your donation.</p>
         </header>
 
