--- a/DonationI.html
+++ b/DonationI.html
@@ -90,8 +90,10 @@
         </header>
 
 <div class="form">
+<!--
           <div id="sendmessage">Your payment has been processed. Thank you!</div>
           <div id="errormessage">There is an error. Please check all fields again.</div>
+-->
           <form action="" method="post" role="form" class="contactForm">
             <div class="form-row">
               <div class="form-group col-md-6">
@@ -136,13 +138,20 @@
               </div>
             </div>
 			<div class="form-group col-md-6">
-			<label>Donation Type</label>
-             <select id = "myList">
+			<label>Donation Type: </label>
+             <select id = "donationType">
                <option value = "1">Clothing</option>
                <option value = "2">Food</option>
                <option value = "3">Furniture</option>
                <option value = "4">Toys</option>
              </select>
+			</div>
+			<div class="form-group col-md-6">
+			<label>How do you want to donate it? : </label>
+             <select id = "locationChoice">
+               <option value = "1">Drop Off</option>
+               <option value = "2">Pick Up</option>
+			   </select>
 			</div>
             <div class="form-group">
               <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="" placeholder="Description"></textarea>
