--- a/DonationI.html
+++ b/DonationI.html
@@ -144,6 +144,7 @@
                <option value = "2">Food</option>
                <option value = "3">Furniture</option>
                <option value = "4">Toys</option>
+			   <option value = "5">Other</option>
              </select>
 			</div>
 			<div class="form-group col-md-6">
