--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </li>
           <li class="menu-has-children"><a href="">Donate</a>
             <ul>
-              <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI.html">In-Kind</a></li>
+              <li><a href="DonationI.html">Monetary</a></li>
+              <li><a href="Donation.html">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
