--- a/Donation.html
+++ b/Donation.html
@@ -40,7 +40,7 @@
   <!--==========================
     Header
   ============================-->
- <header id="header">
+  <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
@@ -51,7 +51,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
+          <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
@@ -76,7 +76,6 @@
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
-
   <!--==========================
     Intro Section
   ============================-->
