--- a/Volunteer.html
+++ b/Volunteer.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -26,7 +25,6 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
   <!-- =======================================================
     Theme Name: BizPage
     Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
@@ -40,7 +38,7 @@
   <!--==========================
     Header
   ============================-->
-   <header id="header">
+ <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
@@ -76,38 +74,26 @@
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
-  
-   <!--==========================
-      Call To Action Section
-    ============================-->
-    <section id="call-to-action" class="wow fadeIn">
-      <div class="container text-center">
-        <h3>Volunteer</h3>
-        <p> Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org.">volunteer@nvfs.org</a></p>
-		<p></p>
-		<p> “More people should volunteer. The real reward of volunteering is showing up and being involved with the clients, learning that they are just like anybody else you come in contact with.” </br> -Amy Sue </p>
-        <a class="cta-btn" href="https://www.nvfs.org/get-involved/volunteer/">Volunteer</a>
-      </div>
-    </section><!-- #call-to-action -->
-	
-	<!--==========================
-    Footer
-	============================-->
-  <footer id="footer">
-
+<section id="Volunteer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+
+      <header class="section-header">
+          <pre> </pre>
+          <pre></pre>
+        <h3>Volunteer!</h3>
+        <p>Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org">volunteer@nvfs.org</a>.</p>
+      </header>
+
+      <div class="row about-cols">
+
+        <div class="col-md-4 wow fadeInUp">
+          <div class="about-col">
+            <div class="img">
+              <img src="img/volunteer-hero.jpg" alt="" class="img-fluid">
+              <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
+            </div>
+            <p> Check out the different volunteer oportunities on the NVFS website. Click below! </p>
+            <h2 class="title"><center><a href="https://www.nvfs.org/get-involved/volunteer/">Volunteer</a></center></h2>
+        </div>
     </div>
-  </footer><!-- #footer -->
-	
+  </section>
