--- a/Donation.html
+++ b/Donation.html
@@ -44,14 +44,14 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">NVFS</a></h1>
+        <h1><a href="index.html" class="scrollto">NVFS</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
+          <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
@@ -66,13 +66,13 @@
           </li>
           <li class="menu-has-children"><a href="">Donate</a>
             <ul>
-              <li><a href="#">Monetary</a></li>
-              <li><a href="#">In-Kind</a></li>
+              <li><a href="Donation.html">Monetary</a></li>
+              <li><a href="DonationI.html">In-Kind</a></li>
             </ul>
           </li>
-          <li class="menu-active"><a href="#intro">Volunteer</a></li>
-          <li class="menu-active"><a href="#intro">About</a></li>
-          <li class="menu-active"><a href="#intro">Contact</a></li>
+          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+          <li class="menu-active"><a href="#">About</a></li>
+          <li class="menu-active"><a href="#">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -155,10 +155,10 @@
                 <input type="text" name="name" class="form-control" id="name" placeholder="Cardholder's full name" data-rule="minlen:2" data-msg="Please enter the full name" />
                 <div class="validation"></div>
               </div>
-            <div class="form-group">
+            </div>
+			<div class="form-group">
               <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="" placeholder="Additional notes"></textarea>
               <div class="validation"></div>
-            </div>
             </div>
             <div class="text-center"><button type="submit">Submit</button></div>
           </form>
