--- a/Volunteer.html
+++ b/Volunteer.html
@@ -38,7 +38,7 @@
   <!--==========================
     Header
   ============================-->
- <header id="header">
+  <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
@@ -62,10 +62,10 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href="">Donate</a>
+          <li class="menu-has-children"><a>Donate</a>
             <ul>
-              <li><a href="DonationI.html">Monetary</a></li>
-              <li><a href="Donation.html">In-Kind</a></li>
+              <li><a href="Donation.html">Monetary</a></li>
+              <li><a href="DonationI.html">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
