--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href="">Donate</a>
+          <li class="menu-has-children">Donate</a>
             <ul>
-              <li><a href="#">Monetary</a></li>
-              <li><a href="#">In-Kind</a></li>
+              <li><a href="Donation.html">Monetary</a></li>
+              <li><a href="DonationI">In-Kind</a></li>
             </ul>
           </li>
-          <li class="menu-active"><a href="#intro">Volunteer</a></li>
-          <li class="menu-active"><a href="#intro">About</a></li>
-          <li class="menu-active"><a href="#intro">Contact</a></li>
+          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+          <li class="menu-active"><a href="About.html">About</a></li>
+          <li class="menu-active"><a href="Contact.html">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -124,7 +124,7 @@
               <div class="carousel-content">
                 <h2>Volunteer</h2>
                 <p>Find volunteering opporunitites near you!</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Involved</a>
+                <a href="Volunteer.html" class="btn-get-started scrollto">Get Involved</a>
               </div>
             </div>
           </div>
