--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children">Donate</a>
+          <li class="menu-has-children"><a href=""> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
               <li><a href="DonationI">In-Kind</a></li>
