--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Our Mission</h2>
-                <p>Providing the essential building blocks for financial, emotional, and physical well-being, serving as leaders and innovators for the Northern Virginia communnnity. Every year, we empower 35,000 individuals to achieve self-sufficiency. With these essential resources, our community is better equipped for future sucess and engagement among all of our neighbors.</p>
+                <p>To empower individuals and families to improve their quality of life, and to promote community cooperation and support in responding to family needs.</p>
               </div>
             </div>
           </div>
