--- a/DonationI.html
+++ b/DonationI.html
@@ -94,7 +94,7 @@
           <div id="sendmessage">Your payment has been processed. Thank you!</div>
           <div id="errormessage">There is an error. Please check all fields again.</div>
 -->
-          <form action="" method="post" role="form" class="contactForm">
+          <form action="inkind2.html" method="post" role="form" class="contactForm">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
