--- a/inkind2.html
+++ b/inkind2.html
@@ -85,8 +85,8 @@
       <div class="container">
 
         <header class="section-header">
-          <h3></h3>
-          <p>Please fill in the fields below in order for us to process your donation.</p>
+          <h3>In-Kind Donation Second Page</h3>
+          <p></p>
         </header>
 
         </div>
