--- a/DonationI.html
+++ b/DonationI.html
@@ -101,7 +101,7 @@
 			+ (document.myform.lname.value);
 		}
 	</script>
-          <form action="inkind2.html" method="post" role="form" class="contactForm">
+          <form action="" method="post" role="form" class="contactForm">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
