--- a/DonationI.html
+++ b/DonationI.html
@@ -165,12 +165,11 @@
               <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="" placeholder="Description"></textarea>
               <div class="validation"></div>
             </div>
+		  <div><p id="finish"></p></div>
             <div class="text-center"><button type="submit" onclick="check(); return false">Submit</button></div>
           </form>
 		  
         </div>
-	
-	      <p id="finish"></p>
 	      
         </div>
 		
