--- a/DonationI.html
+++ b/DonationI.html
@@ -97,8 +97,8 @@
 	<script>
 	function check()
 		{
-			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation is being sent to NVFS and " +
-				"once it is done being verifed, you will be contacted again to confirm the donation. Thank you so much for donating!";
+			document.getElementById("finish").innerHTML = (document.myform.fname.value) + " " 
+			+ (document.myform.lname.value);
 		}
 	</script>
           <form action="" name="myform" method="post" role="form" class="contactForm">
